--- a/Algorithm/Algorithm.vcxproj.filters
+++ b/Algorithm/Algorithm.vcxproj.filters
@@ -491,5 +491,11 @@
     <ClCompile Include="BaekjoonOnlineJudge_28279.cpp">
       <Filter>BaekjoonOnlineJudge</Filter>
     </ClCompile>
+    <ClCompile Include="BaekjoonOnlineJudge_5639.cpp">
+      <Filter>BaekjoonOnlineJudge</Filter>
+    </ClCompile>
+    <ClCompile Include="BaekjoonOnlineJudge_11725.cpp">
+      <Filter>BaekjoonOnlineJudge</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
