--- a/Algorithm/Algorithm.vcxproj.filters
+++ b/Algorithm/Algorithm.vcxproj.filters
@@ -521,5 +521,8 @@
     <ClCompile Include="프로그래머스_신고 결과 받기.cpp">
       <Filter>프로그래머스</Filter>
     </ClCompile>
+    <ClCompile Include="BaekjoonOnlineJudge_2805.cpp">
+      <Filter>BaekjoonOnlineJudge</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
