--- a/Algorithm/Algorithm.vcxproj.filters
+++ b/Algorithm/Algorithm.vcxproj.filters
@@ -530,5 +530,11 @@
     <ClCompile Include="프로그래머스_입국심사.cpp">
       <Filter>프로그래머스</Filter>
     </ClCompile>
+    <ClCompile Include="BaekjoonOnlineJudge_9461.cpp">
+      <Filter>BaekjoonOnlineJudge</Filter>
+    </ClCompile>
+    <ClCompile Include="BaekjoonOnlineJudge_16395.cpp">
+      <Filter>BaekjoonOnlineJudge</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
