--- a/Algorithm/Algorithm.vcxproj.filters
+++ b/Algorithm/Algorithm.vcxproj.filters
@@ -548,5 +548,11 @@
     <ClCompile Include="BaekjoonOnlineJudge_1931.cpp">
       <Filter>BaekjoonOnlineJudge</Filter>
     </ClCompile>
+    <ClCompile Include="BaekjoonOnlineJudge_11723.cpp">
+      <Filter>BaekjoonOnlineJudge</Filter>
+    </ClCompile>
+    <ClCompile Include="BaekjoonOnlineJudge_2961.cpp">
+      <Filter>BaekjoonOnlineJudge</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
