--- a/Algorithm/Algorithm.vcxproj.filters
+++ b/Algorithm/Algorithm.vcxproj.filters
@@ -563,5 +563,11 @@
     <ClCompile Include="BaekjoonOnlineJudge_5525.cpp">
       <Filter>BaekjoonOnlineJudge</Filter>
     </ClCompile>
+    <ClCompile Include="BaekjoonOnlineJudge_1914.cpp">
+      <Filter>BaekjoonOnlineJudge</Filter>
+    </ClCompile>
+    <ClCompile Include="BaekjoonOnlineJudge_11729.cpp">
+      <Filter>BaekjoonOnlineJudge</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
